syntax = "proto3";

package pb;

import "session/session.proto";

option go_package = "github.com/Streamfair/streamfair_session_svc/pb/session";

message VerifySessionRequest {
    string uuid = 1;
}

message VerifySessionResponse {
    Session session = 1;
}
